src/content/docs/sdk/unity/v4/features/device-info.mdx
---
title: Get device information
description: Use these methods to add details to your callbacks and improve your reporting.
slug: en/sdk/unity/v4/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /en/sdk/unity/features/device-info
---

The Adjust SDK contains helper methods that return device information. Use these methods to add details to your callbacks and improve your reporting.

## Adjust device identifier {#adjust-device-identifier}

```cs
public static string getAdid();
```

Adjust generates a unique Adjust Device ID (ADID) for each device. Call the `getAdid` method to return this ID as a `string`.

```cs
string adid = Adjust.getAdid();
```

## ID For Advertisers {#id-for-advertisers}

<CodeBlock title="Method signature">

```cs
public static string getIdfa();
```

</CodeBlock>

The ID for Advertisers (IDFA) is a device-specific identifier for Apple devices. Call the `getIdfa` method to return this ID as a `string`.

```cs
string idfa = Adjust.getIdfa();
```

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="Method signature">

```cs
public static void getGoogleAdId(Action<string> onDeviceIdsRead);
```

</CodeBlock>

The Google Play Services Advertising ID (GPS ADID) is a device-specific identifier for Android devices.

Users can opt out of sharing their GPS ADID by toggling the "Opt out of Ads Personalization" setting on their device. When a user enables this setting, the Adjust SDK returns a string of zeros when trying to read the GPS ADID.

You can access this value by calling the `getGoogleAdId` method in a background thread. Assign a delegate function to access the GPS ADID value.

```cs
Adjust.getGoogleAdId((string googleAdId) => {
   //...
});
```

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="Method signature">

```cs
public static string getAmazonAdId();
```

</CodeBlock>

The Amazon Advertising ID (Amazon Ad ID) is a device-specific identifier for Android devices. Call the `getAmazonAdId` method to return this ID as a `string`.

```cs
string amazonAdId = Adjust.getAmazonAdId();
```
