src/content/docs/sdk/unity/v5/features/device-info.mdx
---
title: Get device information
description: Use these methods to add details to your callbacks and improve your reporting.
slug: en/sdk/unity/features/device-info
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v4: /en/sdk/unity/v4/features/device-info
---

The Adjust SDK contains helper methods that return device information. Use these methods to add details to your callbacks and improve your reporting.

## Adjust device identifier {#adjust-device-identifier}

```cs
public static void GetAdid(Action<string> callback)
```

Adjust generates a unique Adjust Device ID (ADID) for each device. You can return the device's ADID by calling the `Adjust.GetAdid` method with a callback function. The SDK fetches the information asynchronously and passes it to your callback function.

```cs
Adjust.GetAdid(adid =>
{
    // Your callback function
});
```

## ID For Advertisers {#id-for-advertisers}

<CodeBlock title="Method signature">

```cs
public static void GetIdfa(Action<string> callback)
```

</CodeBlock>

The ID for Advertisers (IDFA) is a device-specific identifier for Apple devices. You can return the device's IDFA by calling the `Adjust.GetIdfa` method with a callback function. The SDK fetches the information asynchronously and passes it to your callback function.

```cs
Adjust.GetIdfa(idfa =>
{
   // Your callback function
});
```

## ID For Vendor {#id-for-vendor}

<CodeBlock title="Method signature">

```cs
public static void GetIdfv(Action<string> callback)
```

</CodeBlock>

The ID for Vendor (IDFV) is a device-specific identifier for Apple devices. You can return the device's IDFV by calling the `Adjust.GetIdfv` method with a callback function. The SDK fetches the information asynchronously and passes it to your callback function.

```cs
Adjust.GetIdfv(idfv =>
{
    // Your callback function
});
```

## Google Play Services Advertising ID {#google-play-services-advertising-id}

<CodeBlock title="Method signature">

```cs
public static void GetGoogleAdId(Action<string> OnDeviceIdsRead)
```

</CodeBlock>

The Google Play Services Advertising ID (GPS ADID) is a device-specific identifier for Android devices.

Users can opt out of sharing their GPS ADID by toggling the "Opt out of Ads Personalization" setting on their device. When a user enables this setting, the Adjust SDK returns a string of zeros when trying to read the GPS ADID.

You can access this value by calling the `GetGoogleAdId` method in a background thread. Assign a delegate function to access the GPS ADID value.

```cs
Adjust.GetGoogleAdId(googleAdId => {
   // Your callback function
});
```

## Amazon Advertiser ID {#amazon-advertiser-id}

<CodeBlock title="Method signature">

```cs
public static void GetAmazonAdId(Action<string> onAmazonAdIdRead)
```

</CodeBlock>

The Amazon Advertising ID (Amazon Ad ID) is a device-specific identifier for Android devices. Call the `GetAmazonAdId` method with a callback function. The SDK fetches the information asynchronously and passes it to your callback function.

```cs
Adjust.GetAmazonAdId(amazonAdId => {
   // Your callback function
});
```
